# SKI-calculus-interpreter

./: .gitignore  CMakeLists.txt  README.md
include/: ast.h  interpreter.h  parser.h  token.h  tokenizer.h
ski/: interpreter.cc  main.cc  parser.cc  tokenizer.cc
ski-programs/: arithmetic.ski  boolean.ski  fibbonacci.ski  pair.ski  test.ski
test/: interpreter_test.cc  parser_test.cc  tokenizer_test.cc
